# ordinis

./: .coverage  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  2025-12-18-this-session-is-being-continued-from-a-previous-co.txt  2025-12-19-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-23-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-23-read20251223-120525-claudecode-cli-opus41cha.txt  2025-12-23-{uuid}-message-transcript.txt  2025-12-23_message-transcript.md  202512180349-message-transcript.txt  202512190828-message-transcript.txt  20251223-0109-caveat-the-messages-below-were-generated-by-the-u.txt  20251223-111401-{githubcopilot-gpt5.2}.md  20251223-115842-{claudecode-cli-opus4.1}_message-transcript.txt  20251223-120525-{claudecode-cli-opus41)_chat-transcript.txt  20251225-0144_message-transcript.txt  20251225-0231_message-transcript.txt  20251225-0245_message-transcript.txt  20251225-0258_message-transcript.txt  20251225-1056-message-transcript.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_STATUS.md  Integration Analysis GS Quant.md  Integration Analysis GS Quant.txt  MODERNIZATION_PLAN.md  Makefile  PAPER_BROKER_PLAN.md  PHASE_1_COMPLETION_REPORT.txt  PORTFOLIO_ARCHITECTURE_REVIEW.md  README.md  SYNAPSE_RAG_DATABASE_REVIEW.md  USAGE.md  comprehensive_backtest_report.json  (+27 more)
.claude/: CONTEXT_REFERENCE.md  CURRENT_SESSION_SUMMARY.md  PROJECT_SNAPSHOT_20251201.json  SESSION_STATE.json  quick_status.txt  session-summary-20251130-part2.md  session-summary-20251130.md  settings.local.json
.claude/agents/: code-reviewer.md  shell-python-programmer.md  software-architect.md  tech-writer.md
.claude/archive/: CLEANUP_REPORT_20251201.md  SESSION_COMPLETE_SUMMARY.md  SESSION_STATE.json
.claude/commands/: kb-search.md  market-conditions.md  research-ticker.md
.claude/skills/: ASSETS_FOLDER_STANDARDS.md
.github/: %%{init: {'flowchart': {'useMaxWidth': t.mmd  BRANCH_POLICY.md  copilot-instructions.md
.github/agents/: Programmer.agent.md
.github/chats/: 2025-12-19_ml-pipeline-gap-fixes.md
.github/workflows/: ci-smoke.yml  ci.yml  claude-code-review.yml  claude.yml  docs.yml
.serena/: project.yml
backtest_results/Aggressive/: report.json
backtest_results/Conservative/: equity_curve.csv  report.json
backtest_results/Moderate/: report.json
backtest_results/comprehensive_10-year_recent/: equity_curve.csv  report.json
backtest_results/comprehensive_2-year_recent/: equity_curve.csv  report.json
configs/: default.yaml  dev.yaml  helix_models.yaml  optimizer.yaml  portfolio_governance.yaml  small_cap_universe.yaml
data/: README.md  real_spy_daily.csv  sample_abc_trending_down.csv  sample_qqq_volatile.csv  sample_spy_trending_up.csv  sample_xyz_sideways.csv
docs/: ARCHITECTURE.md  BRANCH_WORKFLOW.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Current Development State (v0.2.0-dev).docx  Current_DevelopmentState.md  DATASET_MANAGEMENT_GUIDE.md  DATASET_QUICK_REFERENCE.md  DOCS_MODERNIZATION_PLAN.md  MARKET_DATA_ENHANCEMENT_PLAN.md  MODERNIZATION_PLAN.md  MONITORING.md  Ordinis Documentation Migration Plan (docs_ Directory).docx  PERFORMANCE_IMPROVEMENTS.md  PORTFOLIO_ARCHITECTURE_REVIEW.md  POSITION_SIZING_LOGIC.md  POSITION_SIZING_QUICK_REF.md  PROJECT_STATUS_REPORT.md  PROOFBENCH_GUIDE.md  RAG_IMPLEMENTATION.md  SESSION_SUMMARY_KB_IMPLEMENTATION.md  SYSTEM_CAPABILITIES_ASSESSMENT.md  USER_TESTING_GUIDE.md  conf.py  gpu_setup.md  gs_quant_integration_analysis.md  index.md  optimizer_optional.md  style-guide.md  test_policy.txt
docs/analysis/: index.md  (+7 more)
examples/: README.md  backtest_example.py  complete-backtest-demo.py  covered-call-analysis.py  covered-call-backtest.py  covered-call-demo.py  married-put-backtest.py  optionscore-demo.py  test_and_optimize_position_sizing.py
notebooks/: small_cap_kalman_optimizer.ipynb
output/: docs_domain_refactor_analysis.md  optimized_position_sizing_config.json
reports/: README.md  comprehensive-suite-diagnostic-20251210.md  comprehensive-suite-guide-20251210.md  covered-call-backtest-report.md  file-organization-cleanup-20251211.md  project-status-card-20251203.md  release-notes-v020-dev-20251203.md  session-context-20251201.md  session-status-20251210.md  session-summary-20251130.md  technical-indicators-final-report-20251210.md  technical-indicators-integration-report-20251210.md  test-report-20251210.md
scripts/: README.md  analyze_backtest_results.py  analyze_confidence_distribution.py  analyze_win_rates.py  audit_assets.py  audit_references.py  audit_skills.py  backtest_engine.py  backtest_fibonacci_adx.py  backtest_fibonacci_adx_1min.py  backtest_fibonacci_adx_1min_tuned.py  backtest_fibonacci_adx_daily.py  backtest_fibonacci_adx_daily_async.py  backtest_fibonacci_adx_daily_v2.py  backtest_fibonacci_adx_gpu.py  backtest_gs_quant_strategies.py  backtest_kalman_hybrid.py  backtest_ml_optimized.py  backtest_new_indicators.py  backtest_new_indicators_v2.py  broker_cost_calc.py  calc_ai_costs.py  check_chroma_direct.py  check_otel.py  check_positions.py  check_skill_compliance.py  comprehensive_backtest.py  consolidate_dependencies.py  convert_report_to_docx.py  dataset_manager.py  debug_atr.py  debug_fib_adx.py  demo_dev_system.py  demo_full_system.py  deploy_optimized.py  dev_strategy_iteration.py  document_modules.py  enhanced_dataset_config.py  enhanced_dataset_config_v2.py  extended_analysis.py  (+62 more)
site/: 404.html  index.html  sitemap.xml
skills/: INSTALL-PORTFOLIO-SKILL.md  PORTFOLIO-MANAGEMENT-README.md  PORTFOLIO-MANAGEMENT-SKILL.md
src/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_all_phases_complete.py  test_backtesting_framework.py  test_bars_debug.py  test_benchmark_harness.py  test_codegen_mistral.py  test_codegen_sanitization.py  test_current.py  test_fundamental_models.py  test_helix_dev.py  test_helix_quick.py  test_logging_infrastructure.py  test_phase1_fundamental.py  test_rag_basic.py  test_rag_debug.py  test_refactor_with_helix.py  test_smoke_imports.py
(+5951 files in other folders)
