[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ordinis"
version = "0.3.0-dev"
description = "AI-driven quantitative trading system with multi-source market data and paper trading"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ordinis Development Team"}
]
keywords = ["trading", "quantitative", "machine-learning", "finance", "algorithmic-trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core async
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",

    # Data validation
    "pydantic>=2.5.0",

    # Data processing
    "numpy>=1.26.0",
    "pandas>=2.1.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",

    # Logging
    "loguru>=0.7.0",

    # Type hints
    "typing-extensions>=4.8.0",

    # AI/LLM
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "pytest-timeout>=2.2",
    "hypothesis>=6.80",
    "fakeredis>=2.23.2",

    # Linting & Formatting
    "ruff>=0.1.6",
    "black>=23.11",
    "isort>=5.12",

    # Type Checking
    "mypy>=1.7",
    "types-PyYAML>=6.0",

    # Security
    "bandit>=1.7",
    "safety>=2.3",

    # Documentation
    "pdoc>=14.0",
    "sphinx>=7.2",

    # Pre-commit
    "pre-commit>=3.5",
]

ml = [
    # Machine Learning
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",

    # Deep Learning (optional)
    "torch>=2.1.0",
    "tensorflow>=2.14.0",
]

monitoring = [
    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]

database = [
    # Database
    "psycopg>=3.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
]

live-trading = [
    # Local persistence (SQLite)
    "aiosqlite>=0.19.0",
    # Desktop notifications
    "plyer>=2.1.0",
]

ai = [
    # AI/LLM Integration
    "langchain>=0.1.0",
    "langchain-nvidia-ai-endpoints>=0.1.0",
    "openai>=1.12.0",  # For OpenAI-compatible APIs
]

visualization = [
    # Interactive charting and dashboards
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "kaleido>=0.2.1",  # Static image export for plotly
]

all = [
    "intelligent-investor[dev,ml,monitoring,database,ai,visualization]",
]

[project.scripts]
intelligent-investor = "ordinis.interface.cli:main"

[project.urls]
Homepage = "https://github.com/FleithFeming/intelligent-investor"
Documentation = "https://github.com/FleithFeming/intelligent-investor/tree/main/docs"
Repository = "https://github.com/FleithFeming/intelligent-investor"
Issues = "https://github.com/FleithFeming/intelligent-investor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ordinis", "ordinis.*"]

# ==================== PYTEST ====================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=50",  # Temporarily lowered - will increase as we add more tests
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, external dependencies)",
    "slow: Slow tests (>1 second)",
    "requires_api: Tests requiring API keys",
]

# ==================== COVERAGE ====================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Too noisy for now
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for current codebase
disallow_any_unimported = false  # Too strict for now
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Too noisy
warn_no_return = true
check_untyped_defs = false  # Too strict for current codebase
strict_equality = true
ignore_missing_imports = true  # For now, until we add stubs
explicit_package_bases = true
namespace_packages = true
# Note: src/__init__.py exists, so src is the package root (not mypy_path)

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ordinis.core.validation",
    "ordinis.plugins.base",
    "ordinis.adapters.market_data.*",
    "ordinis.engines.proofbench.core.simulator",
    "ordinis.interface.dashboard.*"
]
# Suppress type errors in Phase 1 code - will fix in future refactor
disable_error_code = ["operator", "assignment", "union-attr", "arg-type", "index", "var-annotated"]

# ==================== RUFF ====================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]

ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN001",  # Missing type annotation for function arguments
    "ANN201",  # Missing type annotation for public functions
    "ANN204",  # Missing type annotation for special methods
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN202",  # Missing return type annotation for private functions
    "ANN401",  # Dynamically typed expressions (Any)
    "S101",    # Use of assert (OK in tests)
    "S105",    # Possible hardcoded password (false positives on constants)
    "DTZ001",  # Datetime without tzinfo (not always needed)
    "DTZ003",  # Datetime.utcnow() (will migrate later)
    "DTZ006",  # Datetime.fromtimestamp() without tz
    "DTZ007",  # Naive datetime from strptime
    "PLR0913", # Too many arguments (sometimes necessary)
    "PLR2004", # Magic values (sometimes OK)
    "TRY003",  # Long exception message (prefer clarity)
    "TRY300",  # Consider moving to else block
    "TRY400",  # Use logging.exception (prefer explicit error logging)
    "E501",    # Line too long (handled by formatter)
    "EM101",   # Exception string literals (OK for simple cases)
    "EM102",   # Exception f-string literals (OK for simple cases)
    "TRY004",  # Prefer TypeError (not always applicable)
    "PLR1714", # Merge multiple comparisons (sometimes less readable)
    "ARG001",  # Unused function argument (sometimes needed for interface)
    "ARG002",  # Unused method argument (sometimes needed for interface)
    "RET504",  # Unnecessary assignment before return (sometimes clearer)
    "SIM102",  # Use single if statement (sometimes less readable)
    "SIM108",  # Use ternary operator (sometimes less readable)
    "UP038",   # Use X | Y in isinstance (not available in all Python versions)
    "RUF012",  # Mutable class attributes should be ClassVar
    "B007",    # Loop control variable not used (OK in some cases)
    "F841",    # Assigned but unused variable (sometimes needed for debugging)
    "PLC0415", # import should be at top of file (dynamic imports OK)
    "E402",    # Module level import not at top (dynamic imports OK)
    "TRY401",  # Abstract raise to inner function (complexity OK)
    "DTZ005",  # datetime.now() without tz (will fix incrementally)
    "PLR0915", # Too many statements (complex functions OK)
    "PLR0912", # Too many branches (complex logic OK)
    "PLR0911", # Too many return statements (OK)
    "PTH123",  # open() vs Path.open() (both are fine)
    "N806",    # Variable should be lowercase (sometimes uppercase is clearer)
    "S110",    # try-except-pass (sometimes intentional)
    "RUF001",  # Ambiguous unicode (OK in comments)
    "RUF002",  # Ambiguous unicode (OK in docstrings)
    "RUF003",  # Ambiguous unicode (OK in comments)
    "TRY301",  # Abstract raise to inner function
    "PLW0603", # Global statement (sometimes needed)
    "ARG004",  # Unused static method argument
    "UP035",   # Deprecated typing imports (OK for compatibility)
    "S603",    # subprocess call (OK for known commands)
    "S608",    # SQL injection (false positive on dynamic queries)
    "DTZ011",  # Datetime without tzinfo (will fix later)
    "ANN205",  # Missing return type for static method
    "SIM105",  # Use contextlib.suppress (sometimes explicit better)
    "S311",    # Random for security (OK for non-security uses)
    "S112",    # try-except-continue (sometimes needed)
    "PTH103",  # os.makedirs vs Path.mkdir (both OK)
    "A001",    # Variable shadowing builtin (sometimes intentional)
    "A002",    # Argument shadowing builtin (sometimes intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Assert allowed in tests
    "ANN",     # Type annotations not required in tests
    "PLR2004", # Magic values OK in tests
    "ARG",     # Unused arguments OK in tests
    "DTZ",     # Datetime issues OK in tests
    "PT018",   # Multi-part assertions OK in tests
    "PT011",   # Broad exceptions OK in tests
    "TRY002",  # Custom exceptions not required in tests
    "PTH",     # Pathlib not required in tests
]
"docs/**/*.py" = [
    "ANN",     # Type annotations not required in examples
    "PLR2004", # Magic values OK in examples
    "RET504",  # Unnecessary assignment before return
    "F401",    # Unused imports OK in examples
    "F811",    # Redefinitions OK in examples
    "F821",    # Undefined names OK in examples
    "TRY",     # Exception handling not strict in examples
    "PTH",     # Pathlib not required in examples
    "E",       # Style issues OK in examples
    "S",       # Security issues relaxed in examples
    "N",       # Naming conventions not strict in examples
    "B",       # Bugbear not strict in examples
    "RUF",     # Ruff rules not strict in examples
    "SIM",     # Simplify not strict in examples
    "ISC",     # Implicit string concat OK in examples
    "ARG",     # Unused arguments OK in examples
    "C4",      # Comprehensions not strict in examples
]
"examples/**/*.py" = [
    "ANN",     # Type annotations not required
    "F",       # All Flake8 rules relaxed
    "N",       # Naming not strict
    "TRY",     # Exception handling relaxed
    "S",       # Security relaxed
    "PTH",     # Pathlib not required
]
"scripts/**/*.py" = [
    "ANN",     # Type annotations not required in scripts
    "PLR2004", # Magic values OK in scripts
    "PTH",     # Pathlib not required in scripts
    "TRY",     # Exception handling relaxed
    "S",       # Security relaxed in scripts
    "E",       # Style issues OK in scripts
    "W",       # Warnings OK in scripts
    "B",       # Bugbear relaxed
    "RUF",     # Ruff rules relaxed
    "SIM",     # Simplify not strict
    "F",       # Flake8 rules relaxed
    "N",       # Naming relaxed
    "PLR1722", # exit() instead of sys.exit() OK
    "PLW0127", # Self-assignment OK
]

[tool.ruff.lint.isort]
known-first-party = ["ordinis"]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 15

# ==================== BLACK ====================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ==================== ISORT ====================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src/ordinis", "tests"]

# ==================== BANDIT ====================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # assert_used (OK in tests)
